plugins {
    id "java"
    id 'checkstyle'
    id 'application'
    id 'io.freefair.lombok' version '8.10'
}

allprojects {
    group = 'com.epam.aidial'
    version = "0.44.4"

    apply plugin: 'java'
    apply plugin: 'checkstyle'
    apply plugin: 'application'
    apply plugin: 'io.freefair.lombok'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    checkstyle {
        configDirectory = file("$rootProject.projectDir/checkstyle")
    }

    repositories {
        maven {
            url = uri("https://maven.pkg.github.com/epam/jclouds")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("GPR_PASSWORD")
            }
        }
        mavenCentral()
    }

    subprojects {
        configurations.configureEach {
            exclude group: "io.netty", module: "netty-transport-native-epoll"
        }
    }

    configurations.configureEach {
        resolutionStrategy {
            force 'com.google.code.gson:gson:2.11.0'
            force 'net.minidev:json-smart:2.5.2'
            force 'io.grpc:grpc-netty-shaded:1.75.0'
            force "io.netty:netty-codec-http2:${netty_version}"
            force "io.netty:netty-codec-dns:${netty_version}"
            force "io.netty:netty-resolver-dns:${netty_version}"
            force "com.google.guava:guava:${guava_version}"
            dependencySubstitution {
                substitute module('com.google.guava:guava:31.0.1-jre') using module("com.google.guava:guava:${guava_version}") because "CVE in 31.0.1-jre pulled transitively via com.google.inject:guice:7.0.0"
            }
            force 'commons-beanutils:commons-beanutils:1.11.0'
        }
    }

}
